<resources>
    <string name="app_name">Movies Catalogue</string>
    <string name="title">Title</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="year">2019</string>
    <string name="_75">95%</string>
    <string name="title_detail">Title detail</string>
    <string name="status">Status</string>
    <string-array name="status_movies">
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>

        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
    </string-array>
    <string name="user_score">User Score</string>
    <string name="score">score</string>
    <string name="genre">Genre</string>
    <string name="length">Length</string>
    <string name="_2h_15m">2h 15m</string>
    <string name="english">English</string>
    <string name="budget">Budget</string>
    <string name="_000000">$000000</string>
    <string name="_00000">$00000</string>
    <string name="overview">Overview</string>
    <string name="lorem_ipsum_dolor_sit_amet">Lorem Ipsum Dolor Sit amet</string>
    <string name="revenue">Revenue</string>
    <string name="movie_item_detail">Movie Detail</string>
    <string name="movie_item_title">Movie Title</string>
    <string name="year_release">Year</string>
    <string name="rating">User Rating</string>
    <string name="length_movie">Length</string>
    <string name="length_video">Length Video</string>
    <string name="language">Language</string>
    <string name="movie_poster">Movie Poster</string>
    <string-array name="title_movies">
        <item>A Star Is Born</item>
        <item>The Mule</item>
        <item>Bohemian Rhapsody</item>
        <item>Bumblebee</item>
        <item>Aquaman</item>
        <item>Avengers: Infinity War</item>
        <item>Spider-Man: Into the Spider-Verse</item>
        <item>Robin Hood</item>
        <item>The Girl in the Spiders Web</item>
        <item>Bird Box</item>

        <item>Creed II</item>
        <item>Mary Poppins Returns</item>
        <item>Once Upon a Deadpool</item>
        <item>How to Train Your Dragon: The Hidden World</item>
        <item>Dragon Ball Super: Broly</item>
        <item>Glass</item>
        <item>Hunter Killer</item>
        <item>Mortal Engines</item>
        <item>Preman Pensiun</item>
        <item>Venom</item>
    </string-array>
    <string-array name="overview_movies">
        <item>Seasoned musician Jackson Maine discovers — and falls in love with — struggling artist Ally. She has just about given up on her dream to make it big as a singer — until Jack coaxes her into the spotlight. But even as Allys career takes off, the personal side of their relationship is breaking down, as Jack fights an ongoing battle with his own internal demons.</item>
        <item>Earl Stone, a man in his 80s, is broke, alone, and facing foreclosure of his business when he is offered a job that simply requires him to drive. Easy enough, but, unbeknownst to Earl, he’s just signed on as a drug courier for a Mexican cartel. He does so well that his cargo increases exponentially, and Earl hit the radar of hard-charging DEA agent Colin 			Bates.</item>
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock n roll band Queen in 1970. Hit songs become instant classics. When Mercurys increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet – finding a way to keep the 			band together amid the success and excess.</item>
        <item>On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle-scarred and broken. When Charlie revives him, she quickly learns this is no ordinary yellow VW bug.</item>
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orms half-human, half-Atlantean brother and true heir to the throne.</item>
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have 			fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</item>
        <item>Miles Morales is juggling his life between being a high school student and being a spider-man. When Wilson "Kingpin" Fisk uses a super collider, others from across the Spider-Verse are transported to this dimension.</item>
        <item>A war-hardened Crusader and his Moorish commander mount an audacious revolt against the corrupt English crown.</item>
        <item>In Stockholm, Sweden, hacker Lisbeth Salander is hired by Frans Balder, a computer engineer, to retrieve a program that he believes it is too dangerous to exist.</item>
        <item>Five years after an ominous unseen presence drives most of society to suicide, a survivor and her two children make a desperate bid to reach safety.</item>

        <item>Between personal obligations and training for his next big fight against an opponent with ties to his familys past, Adonis Creed is up against the challenge of his life.</item>
        <item>In Depression-era London, a now-grown Jane and Michael Banks, along with Michaels three children, are visited by the enigmatic Mary Poppins following a personal loss. Through her unique magical skills, and with the aid of her friend Jack, she helps the family rediscover the joy and wonder missing in their lives.</item>
        <item>A kidnapped Fred Savage is forced to endure Deadpools PG-13 rendition of Deadpool 2 as a Princess Bride-esque story thats full of magic, wonder and zero Fs.</item>
        <item>As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless’ discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccup’s reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind.</item>
        <item>Earth is peaceful following the Tournament of Power. Realizing that the universes still hold many more strong people yet to see, Goku spends all his days training to reach even greater heights. Then one day, Goku and Vegeta are faced by a Saiyan called Broly who theyve never seen before. The Saiyans were supposed to have been almost completely wiped out in the destruction of Planet Vegeta, so whats this one doing on Earth? This encounter between the three Saiyans who have followed completely different destinies turns into a stupendous battle, with even Frieza (back from Hell) getting caught up in the mix.</item>
        <item>In a series of escalating encounters, former security guard David Dunn uses his supernatural abilities to track Kevin Wendell Crumb, a disturbed man who has twenty-four personalities. Meanwhile, the shadowy presence of Elijah Price emerges as an orchestrator who holds secrets critical to both men.</item>
        <item>Captain Glass of the USS Arkansas discovers that a coup détat is taking place in Russia, so he and his crew join an elite group working on the ground to prevent a war.</item>
        <item>Many thousands of years in the future, Earth’s cities roam the globe on huge wheels, devouring each other in a struggle for ever diminishing resources. On one of these massive traction cities, the old London, Tom Natsworthy has an unexpected encounter with a mysterious young woman from the wastelands who will change the course of his life forever.</item>
        <item>We dont have an overview translated in English. Help us expand our database by adding one.</item>
        <item>Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to protect the world from a shadowy organization looking for a symbiote of their own.</item>
    </string-array>
    <string-array name="user_rating_movies">
        <item>75%</item>
        <item>65%</item>
        <item>81%</item>
        <item>81%</item>
        <item>68%</item>
        <item>83%</item>
        <item>84%</item>
        <item>58%</item>
        <item>60%</item>
        <item>70%</item>

        <item>67%</item>
        <item>66%</item>
        <item>70%</item>
        <item>76%</item>
        <item>74%</item>
        <item>65%</item>
        <item>63%</item>
        <item>60%</item>
        <item>66%</item>
        <item>66%</item>
    </string-array>
    <string-array name="length_movies">
        <item>2h 15m</item>
        <item>1h 57m</item>
        <item>2h 15m</item>
        <item>1h 54m</item>
        <item>2h 24m</item>
        <item>2h 29m</item>
        <item>1h 57m</item>
        <item>1h 56m</item>
        <item>1h 57m</item>
        <item>2h 4m</item>

        <item>2h 10m</item>
        <item>2h 11m</item>
        <item>1h 57m</item>
        <item>1h 44m</item>
        <item>1h 41m</item>
        <item>2h 9m</item>
        <item>2h 2m</item>
        <item>2h 9m</item>
        <item>1h 34m</item>
        <item>1h 52m</item>
    </string-array>
    <string-array name="genre_movies">
        <item>Drama , Romance, Music</item>
        <item>Crime , Drama, Thriller</item>
        <item>Drama, Music</item>
        <item>Action, Adventure, Science Fiction</item>
        <item>Action, Adventure, Fantasy</item>
        <item>Adventure, Action, Fantasy</item>
        <item>Action, Adventure, Animation, Science Fiction, Comedy</item>
        <item>Action, Adventure, Thriller</item>
        <item>Action, Crime, Thriller</item>
        <item>Drama, Thriller</item>

        <item>Drama</item>
        <item>Fantasy, Family, Comedy</item>
        <item>Comedy, Action</item>
        <item>Animation, Family, Adventure</item>
        <item>Action, Animation, Fantasy, Adventure, Comedy, Science Fiction</item>
        <item>Thriller, Mystery, Drama</item>
        <item>Thriller, Action</item>
        <item>Adventure, Fantasy</item>
        <item>Comedy, Drama</item>
        <item>Science Fiction, Action</item>
    </string-array>
    <string-array name="language_movies">
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>

        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>Japanese</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>Indonesian</item>
        <item>English</item>
    </string-array>
</resources>