<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MovieDetail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_margin="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_poster_movie"
                android:layout_width="200dp"
                android:layout_height="300dp"
                android:scaleType="fitXY"
                android:src="@color/colorPrimary"
                android:contentDescription="@string/movie_poster" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_toEndOf="@id/img_poster_movie"
                android:layout_marginStart="26dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:layout_marginTop="5dp"
                    android:paddingTop="2dp"
                    android:textSize="14sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/txt_title_movie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/title"
                    android:fontFamily="serif"
                    android:textColor="@color/colorBlue"
                    android:textSize="16sp"  />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:paddingTop="25dp"
                    android:text="@string/status"
                    android:textSize="14sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/txt_status_movie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/status_movies"
                    android:fontFamily="serif"
                    android:textColor="@color/colorBlue"
                    android:textSize="16sp"  />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:paddingTop="25dp"
                    android:text="@string/user_score"
                    android:textSize="14sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/txt_user_rating_movie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/score"
                    android:fontFamily="serif"
                    android:textColor="@color/colorBlue"
                    android:textSize="16sp"  />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txt_genre_movie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/genre"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:padding="15dp"
                android:textColor="#fff"
                android:background="@color/colorBlue"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="0.5"
                    android:src="@drawable/ic_length"
                    android:padding="15dp"
                    android:contentDescription="@string/length_video" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="0.5"
                    android:src="@drawable/ic_language"
                    android:padding="15dp"
                    android:contentDescription="@string/language" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:paddingTop="5dp"
                    android:text="@string/length_movie"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlue"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:paddingTop="5dp"
                    android:textAlignment="center"
                    android:text="@string/language"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlue"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_length_movie"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/_2h_15m"
                    android:fontFamily="serif"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_language_movie"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_marginTop="5dp"
                    android:textAlignment="center"
                    android:text="@string/english"
                    android:fontFamily="serif"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/overview"
                    android:textAlignment="center"
                    android:padding="15dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:background="@color/colorBlue"
                    android:textColor="#fff"/>

                <TextView
                    android:id="@+id/txt_overview_movie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:text="@string/lorem_ipsum_dolor_sit_amet"
                    android:fontFamily="serif"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</ScrollView>